# ohtu2021-tehtavat

./: PULL.md  README.md  retro.md  vk7-1-ei-stagelle  vk7-1-stage  vk7-2-haara  vk7-2-main
poetry-web/: pyproject.toml
viikko1/nhl-statistics-1/: pyproject.toml
viikko1/nhl-statistics-1/src/: index.py  player_reader.py  statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko1/varasto/src/: varasto.py
viikko2/project-reader/src/: project_reader.py
viikko2/verkkokauppa-1/src/: index.py  kauppa.py  pankki.py
viikko3/hello-robot/src/tests/: increase_counter.robot  reset_counter.robot
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/tests/: home.robot  login.robot  login_resource.robot  register.robot  resource.robot
viikko4/: harjoitus7_tagit.txt
viikko4/int-joukko/src/: int_joukko.py
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/tdd-ostoskori/src/: ostoskori.py
viikko4/tdd-ostoskori/src/tests/: ostoskori_test.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/laskin/src/: kayttoliittyma.py  komentotehdas.py  sovelluslogiikka.py
viikko5/tennis/src/: index.py  tennis_game.py
viikko6/query-language/src/: index.py  matchers.py  querybuilder.py
viikko7/kivi-paperi-sakset/src/: index.py  kayttis.py  kps.py
